@@ -27,10 +27,9 @@ public class BoardService {
 
     private final BoardRepository boardRepository;
     private final UserRepository userRepository;
-    private final CommentRepository commentRepository;
 
     @Transactional
-    public void createBoard(BoardCreatedRequest request, AuthUser authUser) {
+    public Void createBoard(BoardCreatedRequest request, AuthUser authUser) {
 
         User savedUsers = userRepository.findById(request.getUserId()).orElseThrow( // userId는 나중에 authUser.getUserId로 변경
                     () -> new ApiException(ErrorStatus.NOT_FOUND_USER)
@@ -44,20 +43,18 @@ public class BoardService {
                 .build();
 
         boardRepository.save(board);
+
+        return null;
     }
 
     public List<BoardResponse> findAllBoard() {
         // Board 엔티티를 BoardResponse로 변환
         return boardRepository.findAll().stream()
-                .map(board -> BoardResponse.builder()
-                        .id(board.getId())
-                        .title(board.getTitle())
-                        .content(board.getContents())
-                        .language(board.getLanguage().toString())
-                        .framework(board.getFramework())
-                        .userId(board.getUser().getId())  // userId 빌더 메서드를 사용
-                        .build()
-                )
+                .map(board -> new BoardResponse(board.getId(), board.getUser().getId(),
+                        board.getTitle(),
+                        board.getContents(),
+                        board.getLanguage().toString(),
+                        board.getFramework()))
                 .collect(Collectors.toList());  // 결과를 List로 반환
     }
 
@@ -67,39 +64,24 @@ public class BoardService {
                 () -> new ApiException(ErrorStatus.NOT_FOUND_BOARD)
         );
 
-//        List<CommentResponse> commentResponseDtoList = savedBoard.getComments().stream()
-//                .map(comment -> CommentResponse.builder()
-//                        .id(comment.getId())
-//                        .content(comment.getContent())
-//                        .createdAt(comment.getCreatedAt())
-//                        .modifiedAt(comment.getModifiedAt())
-//                        .userId(comment.getUser().getId())
-//                        .build())
-//                .collect(Collectors.toList());  // 결과를 List로 변환
 
-        return BoardDetailResponse.builder()
-                .id(savedBoard.getId())
-                .title(savedBoard.getTitle())
-                .content(savedBoard.getContents())
-                .language(savedBoard.getLanguage().toString())
-                .framework(savedBoard.getFramework())
-                .userId(savedBoard.getUser().getId())
-                .commentResponseDtoList(
-                        savedBoard.getComments().stream()
-                        .map(comment -> CommentResponse.builder()
-                                .id(comment.getId())
-                                .content(comment.getContent())
-                                .createdAt(comment.getCreatedAt())
-                                .modifiedAt(comment.getModifiedAt())
-                                .userId(comment.getUser().getId())
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
+        return new BoardDetailResponse(savedBoard.getId(),
+                savedBoard.getUser().getId(),
+                savedBoard.getTitle(),
+                savedBoard.getContents(),
+                savedBoard.getLanguage().toString(),
+                savedBoard.getFramework(),
+                savedBoard.getComments().stream().map(comment -> new CommentResponse(
+                        comment.getId(),
+                        comment.getContent(),
+                        comment.getUser().getId(),
+                        comment.getBoard().getId(),
+                        comment.getIsAdopted())).toList());
 
     }
 
     @Transactional
-    public void modifiedBoard(Long boardId, BoardModifiedRequest request, AuthUser authUser) {
+    public Void modifiedBoard(Long boardId, BoardModifiedRequest request, AuthUser authUser) {
 
         Board board = boardRepository.findById(boardId).orElseThrow( //
                 () -> new ApiException(ErrorStatus.NOT_FOUND_BOARD)
@@ -114,10 +96,12 @@ public class BoardService {
                 request.getLanguage(),
                 request.getFramework()
         );
+
+        return null;
     }
 
     @Transactional
-    public void deletedBoard(Long boardId, AuthUser authUser, Long userId) {
+    public Void deletedBoard(Long boardId, AuthUser authUser, Long userId) {
         Board board = boardRepository.findById(boardId).orElseThrow(
                 () -> new ApiException(ErrorStatus.NOT_FOUND_BOARD)
         );
@@ -126,5 +110,7 @@ public class BoardService {
             throw new ApiException(ErrorStatus.NOT_THE_AUTHOR);
 
         boardRepository.deleteById(boardId);
+
+        return null;
     }
 }
